--- a/index.html
+++ b/index.html
@@ -3,148 +3,112 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Brain Wave</title>
+    <title>Welcome - Sign Up</title>
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
     <style>
-        /* Base styles */
+        /* Add your CSS styling here */
         body {
             font-family: 'Roboto', sans-serif;
             margin: 0;
             padding: 0;
             background-color: #f7f7f7;
-            color: #333;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            height: 100vh;
         }
         .container {
-            max-width: 1200px;
+            width: 100%;
+            max-width: 400px;
             margin: auto;
-            padding: 0 20px;
-        }
-
-        /* Navbar styles */
-        .navbar {
-            background-color: #005f73;
-            overflow: hidden;
-        }
-        .navbar a {
-            float: left;
-            display: block;
-            color: white;
-            text-align: center;
-            padding: 14px 16px;
-            text-decoration: none;
-        }
-        .navbar a:hover, .navbar a:focus {
-            background-color: #0a9396;
-            color: white;
-        }
-        .signup-button {
-            float: right;
-            background-color: #005f73;
-            padding: 14px 20px;
-        }
-        .signup-button:hover {
-            background-color: #d79b60;
-        }
-        
-        .hero-section {
-            text-align: center;
-            padding: 40px 20px;
-            background: #94d2bd;
-        }
-        .hero-section h1 {
-            color: #fff;
-            font-size: 2.5em;
-            margin-bottom: 20px;
-        }
-        .hero-section p {
-            color: #fff;
-            font-size: 1.2em;
-            margin-bottom: 40px;
-        }
-        .call-to-action {
-            font-size: 1.2em;
-            background-color: #ee9b00;
-            color: white;
-            padding: 10px 30px;
-            text-decoration: none;
-            display: inline-block;
-            border-radius: 5px;
-            transition: background-color 0.3s ease;
-        }
-        .call-to-action:hover {
-            background-color: #ca6702;
-        }
-
-        /* Section styles */
-        .section {
-            background-color: white;
-            margin: 8px 0;
-            padding: 30px;
-            border-radius: 8px;
-            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-        }
-        .section-header {
-            font-size: 2em;
-            margin-bottom: 20px;
-        }
-
-        /* Footer styles */
-        .footer {
-            background-color: #005f73;
-            color: white;
-            text-align: center;
             padding: 20px;
-            margin-top: 30px;
+            background-color: white;
+            border-radius: 5px;
+            box-shadow: 0 2px 5px rgba(0,0,0,0.1);
+            text-align: center;
         }
-
-        /* Responsive layout */
-        @media (max-width: 768px) {
-            .navbar a, .signup-button {
-                float: none;
-                display: block;
-                text-align: left;
-            }
-            .hero-section h1 {
-                font-size: 2em;
-            }
-            .hero-section p {
-                font-size: 1em;
-            }
+        form {
+            display: flex;
+            flex-direction: column;
+            margin-top: 20px;
+        }
+        form label {
+            margin-top: 10px;
+            text-align: left;
+        }
+        form input {
+            padding: 10px;
+            margin-top: 5px;
+            border: 1px solid #ddd;
+            border-radius: 5px;
+            text-align: left;
+        }
+        form button {
+            padding: 10px;
+            margin-top: 20px;
+            background-color: #005f73;
+            color: white;
+            border: none;
+            border-radius: 5px;
+            cursor: pointer;
+            transition: background-color 0.3s ease, transform 0.3s ease; /* Added transition for smooth effect */
+        }
+        form button:hover, form button:focus {
+            background-color: #0a9396;
+            transform: scale(1.05); /* Slightly enlarge the button */
+            outline: none; /* Remove focus border */
+        }
+        .form-footer {
+            text-align: center;
+            margin-top: 20px;
+        }
+        .form-footer a {
+            color: #005f73;
+            text-decoration: none;
         }
     </style>
+    <script>
+        // JavaScript to verify the password and simulate successful submission
+        function validatePasswords() {
+          var password = document.getElementById("password").value;
+          var confirmPassword = document.getElementById("confirm-password").value;
+          if (password !== confirmPassword) {
+            alert("Passwords do not match.");
+            return false;
+          }
+          // Simulate a successful sign-up process
+          window.location.href = 'home.html'; 
+          return false; // Prevent the default form submission
+        }
+      </script>
 </head>
 <body>
-    <div class="navbar">
-        <a href="index.html">Home</a>
-        <a href="youtube_videos.html">YouTube Videos</a>
-        <a href="past_questions.html">PY Questions</a>
-        <a href="notes.html">Notes</a>
-        <a href="reference_books.html">Reference Books</a>
-        <a href="signin.html" class="signup-button">Sign In</a>
-        <a href="signup.html" class="signup-button">Sign Up</a>
-    </div>
-
-    <div class="hero-section">
-        <h1>Welcome to Brain Wave</h1>
-        <p>One-stop hub for all your first year engineering study materials, past papers, and tutorial videos.</p>
-        <a href="#resources" class="call-to-action">Explore Resources</a>
-    </div>
-
     <div class="container">
-        <div class="section" id="resources">
-            <h2 class="section-header">Featured YouTube Videos</h2>
-            <a href="youtube_videos.html" class="call-to-action">Watch Videos</a>
-        </div>
-        <div class="section">
-            <h2 class="section-header">Latest Past Year Questions</h2>
-            <p>Access the latest past year questions to test your knowledge and prepare for your exams.</p>
-            <a href="past_questions.html" class="call-to-action">View Questions</a>
-        </div>
-    </div>
+        <h2>Welcome! Please Sign Up</h2>
+        <form id="signupForm" onsubmit="return validatePasswords()">
+            <label for="name">Name:</label>
+            <input type="text" id="name" name="name" required>
 
-    <div class="footer">
-        <p>&copy; 2023 Brain Wave. All rights reserved.</p>
+            <label for="branch">Branch:</label>
+            <input type="text" id="branch" name="branch" required>
+
+            <label for="email">Email:</label>
+            <input type="email" id="email" name="email" required>
+
+            <label for="contact">Contact:</label>
+            <input type="tel" id="contact" name="contact" required>
+
+            <label for="password">Password:</label>
+            <input type="password" id="password" name="password" required>
+
+            <label for="confirm-password">Confirm Password:</label>
+            <input type="password" id="confirm-password" name="confirm-password" required>
+
+            <button type="submit">Sign Up</button>
+        </form>
+        <div class="form-footer">
+            <p>Already have an account? <a href="signin.html">Sign In</a></p>
+        </div>
     </div>
-    
 </body>
 </html>
