--- a/signin.html
+++ b/signin.html
@@ -93,7 +93,7 @@
             <button type="submit">Sign In</button>
         </form>
         <div class="form-footer">
-            <p>Don't have an account? <a href="signup.html">Sign Up</a></p>
+            <p>Don't have an account? <a href="index.html">Sign Up</a></p>
         </div>
     </div>
     <div class="footer">
