home page resolved

--- a/youtube_videos.html
+++ b/youtube_videos.html
@@ -68,13 +68,12 @@
 </head>
 <body>
     <div class="navbar">
-        <a href="index.html">Home</a>
+        <a href="home.html">Home</a>
         <a href="youtube_videos.html">YouTube Videos</a>
         <a href="past_questions.html">PY Questions</a>
         <a href="notes.html">Notes</a>
         <a href="reference_books.html">Reference Books</a>
         <a href="signin.html">Sign In</a>
-        <a href="signup.html">Sign Up</a>
     </div>
 
     <div class="container">
